[package]
name = "nakes"
version = "0.1.0"
edition = "2018"

[dependencies]
tokio = { version = "1.9.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "sqlite" ] }
futures = "0.3"
serde_json = "1"
async-trait = "0.1"
